Add autocorrect action

--- a/public/404.html
+++ b/public/404.html
@@ -132,10 +132,10 @@
     <body>
         <div class="container">
             <h1>此页面不存在 <span>:(</span></h1>
-            <p>对不起，没有这么个页面给你查看.</p>
+            <p>对不起，没有这么个页面给你查看。</p>
             <ul>
                 <li>是不是地址错误了？</li>
-                <li>或者这个页面被删除了!</li>
+                <li>或者这个页面被删除了！</li>
             </ul>
             <div class="links">
               <a href="/">回到首页</a>
