--- a/public/500.html
+++ b/public/500.html
@@ -67,7 +67,7 @@
     <body>
         <div class="container">
             <h1>服务访问异常 <span>:(</span></h1>
-            <p>对不起，由于某些原因导致功能异常，请稍后再试.</p>
+            <p>对不起，由于某些原因导致功能异常，请稍后再试。</p>
             <div class="links">
               <a href="/">回到首页</a>
             </div>
